implements custom highlighting loader'

--- a/WoWAddonStudio/WoWAddonStudio.csproj
+++ b/WoWAddonStudio/WoWAddonStudio.csproj
@@ -104,5 +104,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Definitions\lua.xshd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
