--- a/WoWAddonStudio/WoWAddonStudio.csproj
+++ b/WoWAddonStudio/WoWAddonStudio.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utils\LuaIndentationStrategy.cs" />
     <Page Include="Controls\CodeEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
