first iteration of the  autocompletion feature

--- a/WoWAddonStudio/WoWAddonStudio.csproj
+++ b/WoWAddonStudio/WoWAddonStudio.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Controls\CodeEditor.xaml.cs">
       <DependentUpon>CodeEditor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Definitions\LuaCompletionData.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
